# skku_contest

./: .gitignore  README.md  install.sh
arduino/CheckSteering/: CheckSteering.ino
arduino/MotorTest/: MotorTest.ino
arduino/Read_Potentiometer/: Read_Potentiometer.ino
arduino/driving/: driving.ino
src/camera_pkg/: package.xml  setup.py
src/camera_pkg/camera_pkg/: cross_walk_detect.py  image_publisher.py  image_saver.py  lane_detect.py  obstacle.py  traffic_light.py  yolo_seg.py
src/control_pkg/: package.xml  setup.py
src/control_pkg/control_pkg/: control.py  control_p.py  keyboard_controller.py
src/decision_making_pkg/: package.xml  setup.py
src/decision_making_pkg/decision_making_pkg/: motion.py  motion_mission.py
src/decision_making_pkg/decision_making_pkg/config/: parking_map.yaml
src/interfaces_pkg/: CMakeLists.txt  package.xml
src/interfaces_pkg/msg/: CrossWalk.msg  EndLine.msg  LaneInfo.msg  OutLine.msg  ParkingLot.msg  ParkingSpace.msg
src/launch_pkg/: CMakeLists.txt  package.xml
src/launch_pkg/launch/: data_collection.py  general.py  mission.py
src/launch_pkg/rviz/: driving.rviz  general.rviz  general_sim.rviz  mercedes_ros2_control.rviz  mission.rviz  mission_sim.rviz  parking.rviz  parking_sim.rviz
src/lidar_pkg/: package.xml  setup.py
src/lidar_pkg/config/: slam_config.yaml
src/lidar_pkg/lidar_pkg/: scan_cluster.py  scan_publisher.py  scan_viz.py
src/lidar_pkg/lidar_pkg/lib/: __init__.py  lidar_perception_func_lib.py
src/simulation_pkg/: package.xml  setup.py
src/simulation_pkg/config/: mercedes_controllers.yaml
src/simulation_pkg/models/mercedes_obstacle/: model.config  model.sdf
src/simulation_pkg/models/mercedes_split_tex/: model.config  model.pre_measured_backup.sdf  model.sdf
src/simulation_pkg/models/mercedes_split_tex/meshes/: body.mtl  wheel_fr.mtl  wheel_rl.mtl
src/simulation_pkg/models/traffic_sim/: model.config  model.sdf
src/simulation_pkg/models/traffic_sim/meshes/: traffic.dae
src/simulation_pkg/simulation_pkg/: config.py  direct_cmdvel_model_driver.py  launch_runtime.py  motion_command_entity_driver.py  motion_command_ros2control_bridge.py  simulation_keyboard_controller.py  simulation_sender_node.py  traffic_light_keyboard_controller.py
src/simulation_pkg/simulation_pkg/lib/: 012_deploy_lib.py  load_ego_car_parking_node.py  load_obstable_car_node.py  load_traffic_light_node.py
src/simulation_pkg/urdf/: mercedes_split_tex_control.urdf
src/simulation_pkg/worlds/: parking.world  track.world
