<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_pkg</name>
  <version>0.0.0</version>
  <description>Camera package for lane detection using YOLOv8</description>
  <maintainer email="sg@todo.todo">sg</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- 기존 의존성 -->
  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_filters</depend>
  <exec_depend>ament_index_python</exec_depend>
  
  <!-- ultralytics YOLO 관련 -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-pip</exec_depend>

  <!-- ROS 2 관련 의존성 -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>interfaces_pkg</exec_depend>  <!-- LaneInfo 메시지를 사용하기 위해 추가 -->

  <!-- 메시지 의존성 추가 -->
  <exec_depend>rosidl_runtime_py</exec_depend>  <!-- ROS 2 Python 런타임 의존성 추가 -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

